znk-exercise fix overflow

--- a/src/components/znkExercise/scss/_znk-exercise-desktop.scss
+++ b/src/components/znkExercise/scss/_znk-exercise-desktop.scss
@@ -125,7 +125,7 @@ znk-exercise.desktop {
                         height: 100%;
                     }
                 }
-                .swiper-slide-active {
+                .swiper-slide {
                   height: 93%;
                 }
             }
